# QECLean

./: .gitignore  CLAUDE.md  Playground.lean  QECLight.lean  QECTutorial.lean  README.md  Scratch.lean  lakefile.toml
experiments/bb_lab/: .gitignore  GENERATORS.md  HANDOFF.md  HANDOFF_C.md  HANDOFF_C2.md  HANDOFF_C3.md  HANDOFF_FAMILY_D_MOONSHOT.md  HANDOFF_R2.md  HANDOFF_TIER3_CV3.md  README.md  pyproject.toml
experiments/bb_lab/certificates/: bb_108_8_10.cert.json  bb_72_12_6.cert.json  bb_90_8_10.cert.json  gross.cert.json
experiments/bb_lab/instances/: bravyi_table.yaml
experiments/bb_lab/notes/: A0_baseline.md  A10_deck_homotopy_R.md  A10_descent_twist_screen.md  A11_literal_lift_criterion.md  A12_deck_homotopy_R.md  A13_L2_formalization_plan.md  A13_bockstein_equality_plan.md  A13_deck_tower_plan.md  A13_result.md  A14_safe_floor_criterion_plan.md  A15_base_floor_class_plan.md  A15_d7plus_doubling_hunt_plan.md  A15_deficit_wall.md  A16_class_theorem_writeup.md  A17_d7plus_doubling_hunt_plan.md  A17_deficit_wall.md  A18_breadth_sweep.md  A1_literature_L1.md  A1_literature_L2.md  A1_literature_L3.md  A1_literature_L4.md  A1_synthesis.md  A2_scouting.md  A3_track1p1_log.md  A4_writeup.md  A5_goal2_log.md  A6_lean_d12_finish_plan.md  A7_d12_finish_plan.md  A8_doubling_extension_writeup.md  A9_lean_target_screen.md  A_HANDOFF.md  Cv1_design.md  Cv1_literature.md  Cv1_results.md  Cv2_alternatives.md  Cv2_bravyi_table.md  Cv2_corpus_sweep.md  Cv2_literature.md  Cv2_perodual_investigation.md  Cv2_tightness.md  (+31 more)
experiments/bb_lab/phase5/: PLAN.md  check_z.py  closure_data.json  compute.py  compute2.py  data.json  gen_data.py  gen_file.py  gen_probe.py  obligations_3_4_draft.lean
experiments/bb_lab/phase6/: ClassifyProbe.lean  EngineProbe.lean  FrameProbe.lean  LeafProbe.lean  LightStabProbe.lean  MultProbe.lean  Probe.lean
experiments/bb_lab/scripts/: a10_census.py  a10_deck_r_probe.py  a10_descent_covers.py  a10_l1_correspondence.py  a10_l1_image.py  a10_l1_image_verify.py  a10_s0_recover_hits.py  a10_s3_rescue_sweep.py  a10_s5_certify.py  a10_verify_certificates.py  a11_cx_exhaustb.py  a11_cx_hunt.py  a11_cx_nearmiss.py  a11_cx_report.py  a11_cx_slice.py  a11_s1_audit.py  (+183 more)
(+632 files in other folders)
