[project]
name = "bb-lab"
version = "0.1.0"
description = "Bivariate-bicycle (BB) qLDPC code laboratory. Tier-1 substrate for the QEC moonshot pipeline."
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
  "numpy>=1.26,<3",
  "pyyaml>=6.0,<7",
  "duckdb>=1.0,<2",
  "pyarrow>=15,<22",
  "python-sat[pblib,aiger]>=1.8.dev17",
  "click>=8.1,<9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-xdist>=3,<4",
  "scikit-learn>=1.4,<2",
  "pandas>=2.0,<3",
]

[project.scripts]
bb-lab = "bb_lab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bb_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: distance computations that take more than 60s (e.g. n=144, n=288)",
]
# Skip the heroic SAT tests by default. They are real (test_bravyi_sat.py's
# gross and bb_288 cases), but `gross` is ~2 minutes and `bb_288` is days —
# neither belongs in the default `pytest` invocation. Opt back in with
#   uv run pytest -m slow                # only slow tests
#   uv run pytest -o addopts=''          # everything, including slow
addopts = "-m 'not slow'"
